src/objects/SriramCo_Contact__x.object
<CustomObject>
    <externalDataSource>SriramCo</externalDataSource>
    <externalName>Contact</externalName>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantName__c</fullName>
        <externalDeveloperName>AssistantName</externalDeveloperName>
        <label>Assistant&apos;s Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssistantPhone__c</fullName>
        <externalDeveloperName>AssistantPhone</externalDeveloperName>
        <label>Asst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <externalDeveloperName>Birthdate</externalDeveloperName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <externalDeveloperName>Department</externalDeveloperName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Contact Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailBouncedDate__c</fullName>
        <externalDeveloperName>EmailBouncedDate</externalDeveloperName>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailBouncedReason__c</fullName>
        <externalDeveloperName>EmailBouncedReason</externalDeveloperName>
        <label>Email Bounced Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Business Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <externalDeveloperName>HomePhone</externalDeveloperName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEmailBounced__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsEmailBounced</externalDeveloperName>
        <label>Is Email Bounced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JigsawContactId__c</fullName>
        <externalDeveloperName>JigsawContactId</externalDeveloperName>
        <label>Jigsaw Contact ID</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jigsaw__c</fullName>
        <externalDeveloperName>Jigsaw</externalDeveloperName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <externalDeveloperName>LastActivityDate</externalDeveloperName>
        <label>Last Activity</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastCURequestDate__c</fullName>
        <externalDeveloperName>LastCURequestDate</externalDeveloperName>
        <label>Last Stay-in-Touch Request Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastCUUpdateDate__c</fullName>
        <externalDeveloperName>LastCUUpdateDate</externalDeveloperName>
        <label>Last Stay-in-Touch Save Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <externalDeveloperName>LeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <externalDeveloperName>MailingAddress</externalDeveloperName>
        <label>Mailing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <externalDeveloperName>MailingCity</externalDeveloperName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <externalDeveloperName>MailingCountry</externalDeveloperName>
        <label>Mailing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>MailingGeocodeAccuracy</externalDeveloperName>
        <label>Mailing Geocode Accuracy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingLatitude__c</fullName>
        <externalDeveloperName>MailingLatitude</externalDeveloperName>
        <label>Mailing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingLongitude__c</fullName>
        <externalDeveloperName>MailingLongitude</externalDeveloperName>
        <label>Mailing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MailingPostalCode__c</fullName>
        <externalDeveloperName>MailingPostalCode</externalDeveloperName>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingState__c</fullName>
        <externalDeveloperName>MailingState</externalDeveloperName>
        <label>Mailing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <externalDeveloperName>MailingStreet</externalDeveloperName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>Master Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <externalDeveloperName>MobilePhone</externalDeveloperName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Full Name</label>
        <length>121</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherAddress__c</fullName>
        <externalDeveloperName>OtherAddress</externalDeveloperName>
        <label>Other Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherCity__c</fullName>
        <externalDeveloperName>OtherCity</externalDeveloperName>
        <label>Other City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCountry__c</fullName>
        <externalDeveloperName>OtherCountry</externalDeveloperName>
        <label>Other Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherGeocodeAccuracy__c</fullName>
        <externalDeveloperName>OtherGeocodeAccuracy</externalDeveloperName>
        <label>Other Geocode Accuracy</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherLatitude__c</fullName>
        <externalDeveloperName>OtherLatitude</externalDeveloperName>
        <label>Other Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherLongitude__c</fullName>
        <externalDeveloperName>OtherLongitude</externalDeveloperName>
        <label>Other Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherPhone__c</fullName>
        <externalDeveloperName>OtherPhone</externalDeveloperName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OtherPostalCode__c</fullName>
        <externalDeveloperName>OtherPostalCode</externalDeveloperName>
        <label>Other Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherState__c</fullName>
        <externalDeveloperName>OtherState</externalDeveloperName>
        <label>Other State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherStreet__c</fullName>
        <externalDeveloperName>OtherStreet</externalDeveloperName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ReportsToId__c</fullName>
        <externalDeveloperName>ReportsToId</externalDeveloperName>
        <label>Reports To ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <externalDeveloperName>Salutation</externalDeveloperName>
        <label>Salutation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sriram68_Languages_c__c</fullName>
        <externalDeveloperName>sriram68__Languages__c</externalDeveloperName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sriram68_Level_c__c</fullName>
        <externalDeveloperName>sriram68__Level__c</externalDeveloperName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SriramCo Contact</label>
    <pluralLabel>SriramCo Contacts</pluralLabel>
</CustomObject>